--- a/web/src/pages/style.css
+++ b/web/src/pages/style.css
@@ -44,6 +44,7 @@ header {
   background-color: black;
   z-index: 2;
   opacity: 0.6;
+  backdrop-filter: blur(100px);
 }
 #overlay1 {
   padding: 0px;
@@ -95,6 +96,17 @@ h2 {
   color: white;
   border: 0px;
   border-radius: 5px;
+}
+#login-but1 {
+  width: 180px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 10px;
+}
+.caret-down {
+  margin-left: 10%;
+  /* font-size: 15px; */
 }
 .button-grad:hover {
 }
@@ -220,12 +232,15 @@ button {
   margin-top: 3%;
   width: 100%;
   background: transparent;
-  background-color: #e9e9e9;
-  color: white;
-}
-#register-form button.enabled {
+
   background-color: #f07333;
   color: white;
+  cursor: pointer;
+}
+#register-form button:disabled {
+  background-color: #e9e9e9;
+  color: white;
+  cursor: none;
 }
 
 .popup {
@@ -352,51 +367,52 @@ button {
   color: white;
   background: linear-gradient(50deg, #42a57f, #7dc75f);
 }
- .profile-button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
+
+.profile-button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 .profile-menu {
-    position: fixed;
-    top: 50%; 
-    left: 50%;
-    transform: translate(-50%, -50%); 
-    width: 250px;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 250px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
 }
 .profile-menu p {
-    margin: 0 0 10px;
-    font-size: 14px;
-    color: black;
+  margin: 0 0 10px;
+  font-size: 14px;
+  color: white;
 }
 .profile-menu p strong {
-    display: inline-block;
-    width: 120px;
-    font-weight: bold;
+  display: inline-block;
+  width: 120px;
+  font-weight: bold;
 }
 .profile-menu button {
-    background-color: #dc3545;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
 }
 .profile-menu button:hover {
-    background-color: #c82333;
-} 
+  background-color: #c82333;
+}
 
 #sec2 {
   /* display: flex; */
