--- a/web/src/pages/events.css
+++ b/web/src/pages/events.css
@@ -1,8 +1,51 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
-#event-page {
+#event-page,
+#sponsor-page {
   background-color: #ffffff;
   min-height: 400vh;
+}
+
+/* Navbar */
+#navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 18px;
+  overflow-x: hidden;
+  width: 98%;
+  height: 70px;
+  background-color: white;
+  font-family: 'Roboto Condensed', sans-serif;
+  padding-top: 10px;
+}
+#logo {
+  display: flex;
+}
+#logo h2 {
+  position: relative;
+  color: black;
+  margin-left: 40px;
+  /* margin-top: 0px; */
+  /* padding-top: ; */
+}
+#profile-icon {
+  font-size: 25px;
+  margin-right: 1%;
+}
+
+#bottom-navbar {
+  width: 400px;
+  background-color: red;
+  position: fixed;
+  bottom: 0;
+  /* left: 0; */
+  width: 100%;
+  background-color: #333;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+  z-index: 5;
 }
 
 #filter-search {
