--- a/web/src/pages/style.css
+++ b/web/src/pages/style.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: url('fonts/RobotoCondensed-VariableFont_wght.ttf') format('truetype');
+  font-weight: 100 900; 
+}
 #root {
   width: 100%;
 }
