--- a/web/src/pages/events.css
+++ b/web/src/pages/events.css
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: url('fonts/RobotoCondensed-VariableFont_wght.ttf') format('truetype');
+  font-weight: 100 900; 
+}
 #event-page,
 #sponsor-page {
   background-color: #ffffff;
